Town6: Use primary color for boardlet top border

--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -4,7 +4,7 @@
 
 .boardlet {
     background: $white-smoke;
-    border-top: 5px solid $green-light;
+    border-top: 5px solid $primary_color;
     margin-bottom: 1.5rem;
     padding: 1rem;
     border-radius: .7rem;
