Moves visibility icon behind title/text and add simple page/newsletter icon

--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -60,6 +60,10 @@
             text-align: center;
         }
 
+        .fact-visibility-icon {
+            padding-left: .3rem;
+        }
+
         .fact-text {
             margin-left: .5rem;
         }
