--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -6334,11 +6334,17 @@ h2 + div.timeline {
     color: $orange-dark;
 }
 
+/*
+    Dashboard
+*/
+
 .boardlet {
     background: $gray-pastel;
     border-top: 10px solid $green-light;
     margin-bottom: 1.5rem;
     padding: .5rem 1rem 1rem;
+    width: calc((100% / 3) + 1rem);
+    max-width: calc((100% / 3) - 1rem);
 
     h2 {
         font-size: 1.3rem;
