Make all boardlets the samet height

--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -8,6 +8,7 @@
     margin-bottom: 1.5rem;
     padding: 1rem;
     border-radius: .7rem;
+    height: calc(100% - 2rem);
 
     h2.h4 {
         margin-bottom: 1rem;
