Display visibility icon smaller and in primary color

--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -63,6 +63,7 @@
 
         .fact-visibility-icon {
             padding-left: .3rem;
+            color: $primary-color;
         }
 
         .fact-text {
