--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -164,12 +164,18 @@ Person card in lists
     width: 100%;
     border-top: 1px solid #f5f5f5;
 
+    
     .person-card-portrait {
-        height: 5rem;
+        height: 8rem;
         margin-right: 1rem;
         position: relative;
         text-align: center;
-        width: 5rem;
+        width: 8rem;
+        
+        @include breakpoint(small only) {
+                height: 6rem;
+                width: 6rem;
+        }
 
         .fa-user {
             font-size: 4rem;
