--- a/src/onegov/feriennet/theme/styles/dashboard.scss
+++ b/src/onegov/feriennet/theme/styles/dashboard.scss
@@ -4,84 +4,100 @@
 
 .boardlet {
     background: $white-smoke;
-    border-top: 5px solid $primary_color;
     margin-bottom: 1.5rem;
+    border-top: 5px solid $green-light;
     padding: 1rem;
     border-radius: .7rem;
-    height: calc(100% - 2rem);
 
-    h2.h4 {
-        margin-bottom: 1rem;
-        margin-top: -.2rem;
-    }
+h2.h4 {
+    margin-bottom: 1rem;
+    margin-top: -.2rem;
+}
 
-    table{
-        margin-bottom: 0;
+li {
+    font-size: .9rem;
+}
+
+&.boardlet-warning {
+    border-top-color: $yellow-light;
+}
+
+&.boardlet-failure {
+    border-top-color: $red-light;
+}
+
+h2.h4 {
+    padding: .5rem;
+    background: $white;
+    text-align: center;
+    border-radius: .7rem;
+}
+
+.title {
+    font-weight: normal;
+}
+
+.facts {
+    width: 100%;
+    table-layout: auto;
+    border-collapse: collapse;
+
+    tbody {
+        background: transparent;
     }
 
     tr {
-        &.boardlet-failure {
-            border-top-color: $red-light;
-        }
+        background: transparent;
 
-        h2.h4 {
-            padding: .5rem;
-            background: $white;
-            text-align: center;
-            border-radius: .7rem;
-        }
-
-        .title {
-            font-weight: normal;
-        }
-
-        .facts {
-            width: 100%;
-            table-layout: auto;
-            border-collapse: collapse;
-
-            tbody {
-                background: transparent;
-            }
-
-            td:first-child {
-                white-space: nowrap;
-                width: 1%;
-            }
-        }
-
-        .fact-number,
-        .fact-icon {
-            padding: .5rem;
-            border-radius: .2rem;
-            text-align: right;
-        }
-
-        .fact-icon {
-            text-align: center;
-        }
-
-        .fact-visibility-icon {
-            padding-left: .3rem;
-            color: $primary-color;
-        }
-
-        .fact-text {
-            margin-left: .5rem;
+        &.none {
+            color: $base;
         }
     }
+
+    td {
+        padding: .2rem 0;
+        background: transparent;
+    }
+
+    td:first-child {
+        white-space: nowrap;
+        width: 1%;
+    }
+
+    td:last-child {
+        padding-left: .7rem;
+    }
+}
+
+.fact-number span,
+.fact-icon span{
+    background: $white;
+    padding: .2rem .5rem;
+    border-radius: .2rem;
+    width: 100%;
+    display: block;
+    text-align: right;
+}
+
+.fact-icon {
+    padding: .3rem;
+}
+
+.fact-text {
+    margin-left: .5rem;
+}
 }
 
 
 @include breakpoint(medium only) {
-    .boardlet {
-        width: calc(50% - 1rem);
-    }
+.boardlet {
+    width: calc(50% - 1rem);
+}
 }
 
 
 @include breakpoint(small only) {
-    .boardlet {
-        width: 100%;
-    }
+.boardlet {
+    width: 100%;
+}
 }
