Disable paste link if trait differs from source

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1291,3 +1291,10 @@ ul.recipients {
     font-size: .875rem;
     color: $dark-gray;
 }
+
+.disabled-link {
+    cursor: not-allowed;
+    pointer-events: none;
+    color: grey;
+    opacity: 0.5;
+}
