--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -444,7 +444,7 @@ input[type="url"] {
     }
 
     *:first-child.fa:has(+ span) {
-        margin-right: .5rem;
+        margin: 0 .5rem;
     }
 
 }
