Org: Don't allow to paste topic into news and vice versa
TYPE: Feature
LINK: ogc-2105

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1291,3 +1291,9 @@ ul.recipients {
     font-size: .875rem;
     color: $dark-gray;
 }
+
+.disabled-link {
+    cursor: not-allowed;
+    color: grey;
+    opacity: 0.5;
+}
