--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -205,6 +205,7 @@ Person card in lists
     .person-card-function {
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
+        overflow: hidden;
         display: -webkit-box;
         margin-bottom: 0;
 
