Town6: Fix margin for plus and minus button
TYPE: bugfix
LINK: None

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -443,8 +443,12 @@ input[type="url"] {
         }
     }
 
-    *:first-child.fa:has(+ span) {
-        margin-right: .5rem;
+    *:first-child.fa {
+        margin: 0 .5rem;
+    }
+
+    *:first-child.fa:has(+ span:not(.show-for-sr)) {
+        margin-left: 0rem;
     }
 
 }
