--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -269,7 +269,7 @@ footer {
     border: 1px solid $gray;
     color: $body-font-color;
     font-size: .8rem;
-    margin: 0 4px 7px 0;
+    margin: 7px 4px 7px 0;
     padding: .7rem;
 
     &.active {
