Render  fields as markdown

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1219,7 +1219,12 @@ ul.recipients {
 
     .accordion-content {
         border-bottom: 1px solid $gray;
+
+        li li {
+            padding-bottom: 0;
+        }
     }
+
 }
 
 .courses {
