--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -122,6 +122,7 @@ h6,
 /*
     Disable hyphenation in e-mail links and make them breakable
 */
+
 a[href^="mailto:"] {
     @include prefix(hyphens, none);
     @include prefix(word-break, break-all);
@@ -3566,10 +3567,10 @@ button {
 
 }
 
-.accordion .accordion-navigation .field-display {
+.accordion .accordion-navigation dl {
     margin-bottom: 1rem;
 }
-.accordion .accordion-navigation .field-display dd a {
+.accordion .accordion-navigation dd a {
     padding: 0;
     display: inline;
 }
