--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -1670,6 +1670,7 @@ $ticket-files-icon: '\f019';
 $qr-code-icon: '\f029';
 $envelope-icon: '\f0e0';
 $results-icon: '\f080';
+$settings-icon: '\f1de';
 $editbar-bg-color: $topbar-link-bg-hover;
 
 .edit-bar {
@@ -1811,6 +1812,7 @@ $editbar-bg-color: $topbar-link-bg-hover;
     .envelope::before { @include icon($envelope-icon); }
     .internal-link::before { @include icon($internal-link-icon); }
     .results-link::before { @include icon($results-icon); }
+    .settings-link::before { @include icon($settings-icon); }
 }
 
 .mark-as-paid::before { @include icon($mark-as-paid); }
