--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -1,3 +1,8 @@
+#people-filters {
+    margin-bottom: 2rem;
+}
+
+
 /*
     Person card
 */
@@ -56,16 +61,16 @@ $person-email-icon: '\f0e0';
         }
     }
 
+    .person-card-details {
+        flex-grow: 2;
+    }
+
     .person-card-function {
         margin-bottom: 1em;
     }
 
-    .person-card-organisation {
+    :nth-last-child(1 of .person-card-organisation) {
         margin-bottom: 1em;
-
-        span:not(:last-child)::after {
-            content: ' -';
-        }
     }
 
     .person-card-personal {
@@ -164,14 +169,14 @@ Person card in lists
     width: 100%;
     border-top: 1px solid #f5f5f5;
 
-    
+
     .person-card-portrait {
         height: 8rem;
         margin-right: 1rem;
         position: relative;
         text-align: center;
         width: 8rem;
-        
+
         @include breakpoint(small only) {
                 height: 6rem;
                 width: 6rem;
