Agency: Hide vat settings

--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -26,6 +26,7 @@ a > h6 {
 */
 .homepage-settings,
 .holiday-settings,
+.vat-settings,
 .field-geo_provider,
 .field-about_url,
 .field-hide_onegov_footer,
