Org: Adds the ability for resources to be organized into subgroups
TYPE: Feature
LINK: OGC-2021

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -722,6 +722,18 @@ $pageref-color-hover: $iron;
                 }
             }
         }
+
+        &.more-list-level-2 {
+            padding-bottom: 0;
+            ul {
+                box-shadow: -10px 0 8px -10px rgba(0, 0, 0, .07);
+                margin-left: .25rem;
+
+                .list-link, .list-lead, .list-hint {
+                    padding-left: 1rem;
+                }
+            }
+        }
     }
 }
 
@@ -943,6 +955,23 @@ section#content th {
 
     h2 {
         margin-right: 1.5rem;
+    }
+}
+
+.subgroup-title {
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #f5f5f5;
+
+    h5 {
+        margin-top: .75rem;
+        margin-bottom: .75rem;
+        margin-right: 1.5rem;
+    }
+
+    .button.hollow.find-your-spot-link {
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
