Feriennet: Hide ticket archive options for feriennet
TYPE: Feature
LINK: PRO-1386

--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -38,6 +38,13 @@ a > h6 {
 }
 
 /*
+    hide ticket achiving options
+*/
+    .archive-tickets, .ticket-archive {
+        display: none !important;
+    }
+
+/*
     registration on homepage
 */
 .homepage .register {
