--- a/src/onegov/town6/theme/styles/fullcalendar.scss
+++ b/src/onegov/town6/theme/styles/fullcalendar.scss
@@ -406,7 +406,11 @@
     .button {
         border-radius: 3px;
         display: block;
-        margin: 0;
+        margin-left: 0;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
     }
 
     .failed {
@@ -455,6 +459,7 @@
     }
 
     a,
+    .reservation-resource,
     .reservation-time,
     .reservation-price {
         display: block;
@@ -477,6 +482,7 @@
             width: 24px;
         }
 
+        .reservation-resource,
         .reservation-time,
         .reservation-price {
             margin-left: 2.3rem;
