Display of download buttons landsgemeinde [skip-ci]

--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -480,7 +480,7 @@ h1.main-title small {
 .memorial-link {
     @include smooth-edges;
     background: $white-smoke;
-    display: block;
+    display: flex;
     font-weight: bold;
     padding: 1rem;
     transition: background 200ms linear;
