Show breadcrumbs if there is a breadcumb level in the request parameters

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1234,6 +1234,14 @@ ul.recipients {
     footer {
         display: none;
     }
+
+    .show-in-iframe .breadcrumbs {
+        display: block;
+    }
+
+    #back-button {
+        display: block;
+    }
 }
 
 /*
