Stores tag meta on ticket and allows tags to be changed on tickets

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -2938,6 +2938,13 @@ tr.ticket:hover {
     }
 }
 
+.ticket-change-tag {
+    &::before {
+        @include icon($edit-link-icon);
+        margin-right: 1ex;
+    }
+}
+
 .ticket-archive {
     &::before {
         @include icon($archive-ticket-icon);
