--- a/src/onegov/town6/theme/styles/tickets.scss
+++ b/src/onegov/town6/theme/styles/tickets.scss
@@ -334,6 +334,13 @@ tr.ticket:hover {
     }
 }
 
+.ticket-change-tag {
+    &::before {
+        @include icon($edit-link-icon);
+        margin-right: 1ex;
+    }
+}
+
 .ticket-archive {
     &::before {
         @include icon($ticket-archive-icon);
