--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -419,6 +419,7 @@ input[type="number"],
 input[type="email"],
 input[type="tel"],
 input[type="url"] {
+    font-size: 16px !important;
     height: auto;
 }
 
@@ -427,6 +428,17 @@ input[type="url"] {
     border-radius: 10rem !important;
     padding: 1rem 1.5rem !important;
     transition: all 200ms linear !important;
+
+    &.hollow.find-your-spot-link {
+        height: fit-content;
+        margin-bottom: .5rem;
+        margin-top: .5rem;
+        white-space: nowrap;
+
+        i {
+            margin-right: .5rem;
+        }
+    }
 
     &:hover {
         margin-left: -.5rem;
@@ -448,20 +460,20 @@ input[type="url"] {
     }
 
     *:first-child.fa:has(+ span:not(.show-for-sr)) {
-        margin-left: 0rem;
+        margin-left: 0;
     }
 
 }
 
 .download-button {
-    display: block;
-    width: fit-content;
-    border-radius: .7rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     border: 1px solid  $primary-color;
+    border-radius: .7rem;
+    display: block;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
     padding: 1rem;
     transition: background 200ms linear;
+    width: fit-content;
 
     &:hover {
         background: $white-smoke;
@@ -564,7 +576,7 @@ $formlist-padding: .75rem 0;
         margin-bottom: .2em;
         max-width: 90%;
 
-        & > div {
+        > div {
             &.hint-stop::before {
                 color: #b2232f;
             }
@@ -649,8 +661,9 @@ $pageref-color-hover: $iron;
 
         .list-lead {
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 4;
             display: -webkit-box;
+            -webkit-line-clamp: 4;
+            line-clamp: 4;
             overflow: hidden;
 
             &.preview {
@@ -725,11 +738,14 @@ $pageref-color-hover: $iron;
 
         &.more-list-level-2 {
             padding-bottom: 0;
+
             ul {
                 box-shadow: -10px 0 8px -10px rgba(0, 0, 0, .07);
                 margin-left: .25rem;
 
-                .list-link, .list-lead, .list-hint {
+                .list-link,
+                .list-lead,
+                .list-hint {
                     padding-left: 1rem;
                 }
             }
@@ -738,9 +754,25 @@ $pageref-color-hover: $iron;
 }
 
 .side-panel .more-list {
-    li .list-title {
-        display: inline;
-        position: inherit;
+
+    li {
+        .list-title {
+            display: inline;
+            position: inherit;
+        }
+
+        .list-link::after,
+        .list-title::after {
+            opacity: 0;
+            position: absolute;
+            transition: all 200ms linear;
+        }
+
+        &:hover .list-link::after,
+        &:hover .list-title::after {
+            opacity: 1 !important;
+            padding-right: 0;
+        }
     }
 }
 
@@ -760,22 +792,6 @@ $pageref-color-hover: $iron;
     padding-right: 0;
 }
 
-.side-panel .more-list {
-    li {
-        .list-link::after,
-        .list-title::after {
-            opacity: 0;
-            transition: all 200ms linear;
-            position: absolute;
-        }
-
-        &:hover .list-link::after,
-        &:hover .list-title::after {
-            opacity: 1 !important;
-            padding-right: 0;
-        }
-    }
-}
 
 .page-links .list-lead {
     color: $monsoon;
@@ -808,8 +824,8 @@ $pageref-color-hover: $iron;
         }
 
         .page-image {
-            background-color: #000 ;
             @include smooth-edges;
+            background-color: #000;
             padding-bottom: 60%;
             transition: all 200ms linear;
             width: 100%;
@@ -879,28 +895,6 @@ $pageref-color-hover: $iron;
     }
 }
 
-/* Improves accessability and avoids zoom in input form fields
-   for iOS devices.
-*/
-
-select,
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="tel"],
-input[type="url"] {
-    font-size: 16px !important;
-}
-
-
 /*
     Accessibility
 */
@@ -949,9 +943,9 @@ section#content th {
 }
 
 .group-title {
+    align-items: center;
     display: flex;
     margin-top: 2rem;
-    align-items: center;
 
     h2 {
         margin-right: 1.5rem;
@@ -959,30 +953,19 @@ section#content th {
 }
 
 .subgroup-title {
-    display: flex;
     align-items: center;
     border-top: 1px solid #f5f5f5;
+    display: flex;
 
     h5 {
-        margin-top: .75rem;
         margin-bottom: .75rem;
         margin-right: 1.5rem;
+        margin-top: .75rem;
     }
 
     .button.hollow.find-your-spot-link {
-        margin-top: 0;
         margin-bottom: 0;
-    }
-}
-
-.button.hollow.find-your-spot-link {
-    margin-bottom: .5rem;
-    margin-top: .5rem;
-    height: fit-content;
-    white-space: nowrap;
-
-    i {
-        margin-right: .5rem;
+        margin-top: 0;
     }
 }
 
@@ -1010,7 +993,7 @@ ul.recipients {
         }
     }
 
-    &> li {
+    > li {
         color: #707070;
         padding-bottom: 1rem;
     }
@@ -1022,8 +1005,8 @@ ul.recipients {
 }
 
 .page-image {
-    padding-bottom: 2rem;
     background-position: center;
+    padding-bottom: 2rem;
 }
 
 .cancel-link {
@@ -1060,19 +1043,18 @@ ul.recipients {
 }
 
 .sidebar-toggler {
+    align-items: center;
     background: $primary-color;
-    display: block;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
-    position: fixed;
+    border-top: 1px solid rgba(255, 255, 255, .3);
     bottom: 0;
     color: $white;
-    z-index: 1001;
-    width: 100%;
-    border-top: 1px solid rgba(255, 255, 255, 0.3);
-    align-items: center;
     display: flex;
     justify-content: center;
+    padding-bottom: .3rem;
+    padding-top: .3rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1001;
 
     .text {
         font-weight: bold;
@@ -1084,78 +1066,79 @@ ul.recipients {
     $bar-height: 3px;
 
     .animated-hamburger {
-        width: 5 * $bar-height + .5 * $bar-height;
+        cursor: pointer;
         height: 5 * $bar-height;
         margin-right: .5rem;
-        -webkit-transform: rotate(0deg);
         -moz-transform: rotate(0deg);
         -o-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
-        -webkit-transition: .5s ease-in-out;
         -moz-transition: .5s ease-in-out;
         -o-transition: .5s ease-in-out;
+        -webkit-transition: .5s ease-in-out;
         transition: .5s ease-in-out;
-        cursor: pointer;
+        width: 5 * $bar-height + .5 * $bar-height;
+
+
+        span:nth-child(1) {
+            top: 0;
+        }
+
+        span:nth-child(2),
+        span:nth-child(3) {
+            top: 2 * $bar-height;
+        }
+
+        span:nth-child(4) {
+            top: 4 * $bar-height;
+        }
 
         span {
-            display: block;
-            position: absolute;
-            height: $bar-height;
-            width: 100%;
             background: $white;
             border-radius: 9px;
-            opacity: 1;
+            display: block;
+            height: $bar-height;
             left: 0;
-            -webkit-transform: rotate(0deg);
+            opacity: 1;
+            position: absolute;
             -moz-transform: rotate(0deg);
             -o-transform: rotate(0deg);
+            -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
-            -webkit-transition: .25s ease-in-out;
             -moz-transition: .25s ease-in-out;
             -o-transition: .25s ease-in-out;
+            -webkit-transition: .25s ease-in-out;
             transition: .25s ease-in-out;
+            width: 100%;
         }
-    }
-
-
-    .animated-hamburger span:nth-child(1) {
-        top: 0px;
-    }
-
-    .animated-hamburger span:nth-child(2),.animated-hamburger span:nth-child(3) {
-        top: 2 * $bar-height;
-    }
-
-    .animated-hamburger span:nth-child(4) {
-        top: 4 * $bar-height;
     }
 
 
     &[aria-expanded="true"] {
         .animated-hamburger span:nth-child(1) {
+            left: 50%;
             top: 2 * $bar-height;
             width: 0%;
-            left: 50%;
         }
 
         .animated-hamburger span:nth-child(2) {
-            -webkit-transform: rotate(45deg);
             -moz-transform: rotate(45deg);
             -o-transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
         }
 
         .animated-hamburger span:nth-child(3) {
-            -webkit-transform: rotate(-45deg);
             -moz-transform: rotate(-45deg);
             -o-transform: rotate(-45deg);
+            -webkit-transform: rotate(-45deg);
             transform: rotate(-45deg);
         }
 
         .animated-hamburger span:nth-child(4) {
+            left: 50%;
             top: 2 * $bar-height;
             width: 0%;
-            left: 50%;
         }
     }
 }
@@ -1164,13 +1147,13 @@ ul.recipients {
     -moz-transition: all 200ms linear;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
-}
 
-.rotate.down {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
+    &.down {
+        -moz-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
 }
 
 .icon-left-of-text {
@@ -1191,8 +1174,7 @@ ul.recipients {
 }
 
 .dark-overlay {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 26%, rgba(0,0,0,0) 54%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, .4) 0%, rgba(0, 0, 0, .4) 26%, rgba(0, 0, 0, 0) 54%, rgba(0, 0, 0, 0) 100%);
     bottom: 0;
     height: 100%;
     left: 0;
@@ -1206,14 +1188,14 @@ ul.recipients {
     height: 0;
     padding-bottom: 45%;
     position: relative;
-}
 
-.videowrapper iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
+    iframe {
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
 }
 
 /*
@@ -1266,8 +1248,8 @@ ul.recipients {
 
     .accordion-title {
         border-radius: .7rem !important;
-        transition: border-radius 200ms linear;
         font-size: 1rem;
+        transition: border-radius 200ms linear;
 
         &[aria-expanded="true"] {
             border-radius: .7rem .7rem 0 0  !important;
@@ -1285,10 +1267,10 @@ ul.recipients {
 
 
 .result-field {
+    display: block;
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 1rem;
-    display: block;
 }
 
 
@@ -1329,14 +1311,14 @@ ul.recipients {
 }
 
 .imageset-date {
-    font-size: .875rem;
     color: $dark-gray;
+    font-size: .875rem;
 }
 
 .disabled-link {
-    cursor: not-allowed;
     color: grey;
-    opacity: 0.5;
+    cursor: not-allowed;
+    opacity: .5;
 }
 
 
@@ -1348,9 +1330,9 @@ ul.recipients {
 
 $code-background: #f5f5f5;
 $code-border-radius: 4px;
-$code-padding-block: 0.5rem;
-$code-padding-inline: 0.125rem;
-$code-block-margin-bottom: 0.8rem;
+$code-padding-block: .5rem;
+$code-padding-inline: .125rem;
+$code-block-margin-bottom: .8rem;
 
 pre code,
 .code-block,
@@ -1362,13 +1344,17 @@ code {
 
 pre code,
 .code-block {
-    padding: $code-padding-block;
-    margin-bottom: $code-block-margin-bottom;
     display: block;
+    margin-bottom: $code-block-margin-bottom;
+    padding: $code-padding-block;
 }
 
 .code-inline,
 code {
-    padding: $code-padding-inline;
     display: inline;
+    padding: $code-padding-inline;
+}
+
+.reveal.wide {
+    max-width: 700px;
 }
