--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -228,6 +228,10 @@ h1.main-title small {
             right: 0;
             text-align: right;
             top: 0;
+
+            span {
+                margin-left: .3rem;
+            }
         }
     }
 }
