--- a/src/onegov/town6/theme/styles/tickets.scss
+++ b/src/onegov/town6/theme/styles/tickets.scss
@@ -564,6 +564,26 @@ button {
         li {
             margin-bottom: .5rem;
         }
+
+        .reservation {
+            background: $white-smoke;
+            border-radius: 2px;
+            margin-bottom: 1rem;
+            margin-left: -0.5rem;
+            position: relative;
+        }
+
+        .reservation-details {
+            font-size: .8rem;
+            padding: .5rem 8rem .5rem .5rem;
+        }
+
+        .reservation-actions {
+            font-size: .8rem;
+            position: absolute;
+            right: .5rem;
+            top: .275rem;
+        }
     }
 
     .occurrence.occurrence {
