Add LinkedIn and TikTok for Org Footer

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -621,6 +621,11 @@ $footer-border-width: 0;
     margin: 0 0 1rem;
 }
 
+.tiktok {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
 /*
     Links in simple text style (side by side)
 */
