--- a/src/onegov/agency/theme/styles/agency.scss
+++ b/src/onegov/agency/theme/styles/agency.scss
@@ -221,14 +221,19 @@ ul.agency-nav {
     &.requires-scroll {
         padding: 10px;
     }
+
+    ul {
+        margin-bottom: 0;
+    }
 }
 
 .button.alert.yes.disabled {
-    cursor: not-allowed;
+    cursor: not-allowed !important;
     opacity: .6;
 }
 
 .scroll-hint {
+    color: #8e1c26;
     font-style: italic;
     margin-bottom: 1rem;
 }
