Full width line for assembly items

--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -431,6 +431,7 @@ h1.main-title small {
     .title {
         border-top: 1px solid $white-smoke;
         padding: .5rem 0;
+        width: 100%;
     }
 
     .timeline {
